crates/core/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/tests/snapshots/word_parsing_tests__error_empty_word.snap
---
source: crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/helpers.rs
expression: result
---
Err(
    ParseErrors {
        errors: [
            ParseError {
                code: InvalidWordFormat,
                severity: Error,
                location: SourceLocation {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    line: None,
                    column: None,
                },
                context: Some(
                    ErrorContext {
                        source_text: "",
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                        expected: [],
                        found: "",
                        line_offset: None,
                    },
                ),
                labels: [],
                message: "Empty word input",
                suggestion: None,
                help_url: Some(
                    "https://talkbank.org/errors/E212",
                ),
            },
        ],
    },
)
