crates/core/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/tests/snapshots/word_parsing_tests__error_missing_form_type.snap
---
source: crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/helpers.rs
expression: result
---
Err(
    ParseErrors {
        errors: [
            ParseError {
                code: InvalidWordFormat,
                severity: Error,
                location: SourceLocation {
                    span: Span {
                        start: 0,
                        end: 6,
                    },
                    line: None,
                    column: None,
                },
                context: Some(
                    ErrorContext {
                        source_text: "hello@",
                        span: Span {
                            start: 0,
                            end: 6,
                        },
                        expected: [],
                        found: "hello@",
                        line_offset: None,
                    },
                ),
                labels: [],
                message: "Word input contains unparsable content",
                suggestion: None,
                help_url: Some(
                    "https://talkbank.org/errors/E212",
                ),
            },
        ],
    },
)
