crates/core/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/tests/snapshots/word_parsing_tests__overlap_marker_at_beginning.snap
---
source: crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/helpers.rs
assertion_line: 12
expression: result
---
Ok(
    Word {
        span: Span {
            start: 0,
            end: 8,
        },
        word_id: None,
        raw_text: "⌊hello",
        content: WordContents(
            [
                OverlapPoint(
                    OverlapPoint {
                        kind: BottomOverlapBegin,
                        index: None,
                        span: Some(
                            Span {
                                start: 0,
                                end: 3,
                            },
                        ),
                    },
                ),
                Text(
                    WordText(
                        NonEmptyString(
                            "hello",
                        ),
                    ),
                ),
            ],
        ),
        category: None,
        form_type: None,
        lang: None,
        part_of_speech: None,
        inline_bullet: None,
        cached_cleaned_text: CachedStr(
            OnceLock(
                "hello",
            ),
        ),
    },
)
