crates/core/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/tests/snapshots/word_parsing_tests__overlap_marker_midword_excluded.snap
---
source: crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/helpers.rs
assertion_line: 12
expression: result
---
Ok(
    Word {
        span: Span {
            start: 0,
            end: 13,
        },
        word_id: None,
        raw_text: "a⌋2⌈3side",
        content: WordContents(
            [
                Text(
                    WordText(
                        NonEmptyString(
                            "a",
                        ),
                    ),
                ),
                OverlapPoint(
                    OverlapPoint {
                        kind: BottomOverlapEnd,
                        index: Some(
                            OverlapIndex(
                                2,
                            ),
                        ),
                        span: Some(
                            Span {
                                start: 1,
                                end: 5,
                            },
                        ),
                    },
                ),
                OverlapPoint(
                    OverlapPoint {
                        kind: TopOverlapBegin,
                        index: Some(
                            OverlapIndex(
                                3,
                            ),
                        ),
                        span: Some(
                            Span {
                                start: 5,
                                end: 9,
                            },
                        ),
                    },
                ),
                Text(
                    WordText(
                        NonEmptyString(
                            "side",
                        ),
                    ),
                ),
            ],
        ),
        category: None,
        form_type: None,
        lang: None,
        part_of_speech: None,
        inline_bullet: None,
        cached_cleaned_text: CachedStr(
            OnceLock(
                "aside",
            ),
        ),
    },
)
