crates/core/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/tests/snapshots/word_parsing_tests__overlap_marker_simple_excluded_from_cleaned_text.snap
---
source: crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/helpers.rs
assertion_line: 12
expression: result
---
Ok(
    Word {
        span: Span {
            start: 0,
            end: 12,
        },
        word_id: None,
        raw_text: "Yeah⌋⌈2:",
        content: WordContents(
            [
                Text(
                    WordText(
                        NonEmptyString(
                            "Yeah",
                        ),
                    ),
                ),
                OverlapPoint(
                    OverlapPoint {
                        kind: BottomOverlapEnd,
                        index: None,
                        span: Some(
                            Span {
                                start: 4,
                                end: 7,
                            },
                        ),
                    },
                ),
                OverlapPoint(
                    OverlapPoint {
                        kind: TopOverlapBegin,
                        index: Some(
                            OverlapIndex(
                                2,
                            ),
                        ),
                        span: Some(
                            Span {
                                start: 7,
                                end: 11,
                            },
                        ),
                    },
                ),
                Lengthening(
                    WordLengthening {
                        count: 1,
                        span: Some(
                            Span {
                                start: 11,
                                end: 12,
                            },
                        ),
                    },
                ),
            ],
        ),
        category: None,
        form_type: None,
        lang: None,
        part_of_speech: None,
        inline_bullet: None,
        cached_cleaned_text: CachedStr(
            OnceLock(
                "Yeah",
            ),
        ),
    },
)
